# ibre

./: .gitignore  Cargo.toml  README.md
doc/examples/: helloworld.html  helloworld.ts  package.json  pnpm-lock.yaml
src/: debug.rs  lib.rs
src/geo_types/: coord.rs  line_string.rs  mod.rs  point.rs
src/routing/: mod.rs  pmtiles_mvt_router.rs  route.rs  router.rs
src/tile/: mod.rs
src/tile/backend/: cached.rs  mod.rs  pmtiles_mvt_backend.rs
